--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,10 +33,26 @@
             overflow-x: hidden;
         }
 
-        .orga, .sponsor {
-            max-width: 20%;
-            max-height: 200px;
-            margin-right: 10px;
+        .orga {
+            width: 50%;
+        }
+
+        .orgaimg {
+            max-height: 100px;
+            max-width: 80%;
+            margin-top: 20px;
+        }
+
+        .faculty {
+            margin: 40px 0;
+            max-height: 60px;
+            max-width: 60%;
+        }
+
+        .sponsor {
+            max-height: 60px;
+            max-width: 50%;
+            margin-right: 50px;
         }
 
         .mainsponsor {
@@ -45,6 +61,10 @@
 
         .logos {
             text-align: center;
+        }
+
+        .flex {
+            display: flex;
         }
 
         .looking {
@@ -167,9 +187,16 @@
     <div class="row">
         <div class="col-sm-12">
             <h3>Organized by</h3>
-            <div class="logos">
+            <div class="logos flex">
                 {% for orga in site.data.organizers %}
-                <a href="{{orga.link}}"><img src="{{orga.image}}" alt="{{orga.name}}" class="orga"></a>
+                    <div class="orga">
+                        <a href="{{orga.link}}"><img src="{{orga.image}}" alt="{{orga.name}}" class="orgaimg"></a>
+                        {% if orga.faculty %}
+                            <br/>
+                            <a href="{{orga.faculty.link}}"><img src="{{orga.faculty.image}}" alt="{{orga.faculty.name}}" class="faculty"></a>
+                        {% endif %}
+                    </div>
+
                 {% endfor %}
             </div>
         </div>
