--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
 
         #bapclogo {
             max-width: 50%;
-            max-height: 30%;
+            max-height: 250px;
         }
 
         #bapclogo_div {
