--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,6 +85,11 @@
             padding: 0;
             margin: 0;
         }
+
+        table {
+            word-break: break-all;
+        }
+
     </style>
 </head>
 
