--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,10 +86,18 @@
             margin: 0;
         }
 
-        table {
+        .table-scoreboard {
             word-break: break-all;
+            font-size: 0.8em;
         }
 
+        .table-scoreboard td {
+            min-width: 55px;
+        }
+
+        .table-scoreboard td:nth-child(2), .table-scoreboard td:nth-child(3) {
+            min-width: 100px;
+        }
     </style>
 </head>
 
