--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
         }
 
         .table-scoreboard {
-            word-break: break-all;
+            word-break: break-word;
             font-size: 0.8em;
         }
 
