--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -189,9 +189,9 @@
                         <a href="{{sponsor.link}}"><img src="{{sponsor.image}}" alt="{{sponsor.name}}" class="sponsor"></a>
                     {% endif %}
                 {% endfor %}
+                <!--<br/>
                 <br/>
-                <br/>
-                <a class="looking" href='{{ "contact.html" | absolute_url }}'>We are currently looking for sponsors!</a>
+                <a class="looking" href='{{ "contact.html" | absolute_url }}'>We are currently looking for sponsors!</a>-->
             </div>
 
         </div>
