--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,13 +49,20 @@
             max-width: 60%;
         }
 
-        .sponsor {
+        a.sponsor {
+            display: inline-block;
+            width: 33%;
+            height: 60px;
+            margin-bottom: 30px;
+        }
+
+        a.sponsor img {
             max-height: 60px;
-            max-width: 50%;
+            max-width: 100%;
             margin-right: 50px;
         }
 
-        .mainsponsor {
+        a.mainsponsor img {
             max-width: 60%;
         }
 
@@ -173,7 +180,7 @@
             <div class="logos">
                 {% for sponsor in site.data.sponsors %}
                     {% if sponsor.type == "main" %}
-                        <a href="{{sponsor.link}}"><img src="{{sponsor.image}}" alt="{{sponsor.name}}" class="mainsponsor"></a>
+                        <a href="{{sponsor.link}}" class="mainsponsor"><img src="{{sponsor.image}}" alt="{{sponsor.name}}"></a>
                     {% endif %}
                 {% endfor %}
             </div>
@@ -186,7 +193,7 @@
             <div class="logos">
                 {% for sponsor in site.data.sponsors %}
                     {% if sponsor.type != "main" %}
-                        <a href="{{sponsor.link}}"><img src="{{sponsor.image}}" alt="{{sponsor.name}}" class="sponsor"></a>
+                        <a href="{{sponsor.link}}" class="sponsor"><img src="{{sponsor.image}}" alt="{{sponsor.name}}"></a>
                     {% endif %}
                 {% endfor %}
                 <!--<br/>
