--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,6 +105,11 @@
         .table-scoreboard td:nth-child(2), .table-scoreboard td:nth-child(3) {
             min-width: 100px;
         }
+
+        .topinfo {
+            text-align: center;
+            font-size: 1.3em;
+        }
     </style>
 </head>
 
